--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,38 @@
-<div *ngFor="let palette of palettes | keyvalue">
-    Key: <b>{{palette.key}}</b> and Value: <b>{{palette.value.company}}: {{palette.value.name}}</b>
-</div>
+<nav class="navbar has-shadow" role="navigation" aria-label="main navigation">
+  <div class="container">
+    <div class="navbar-brand">
+      <a class="navbar-item" href="https://bulma.io">
+        <img src="https://bulma.io/images/bulma-logo.png" width="112" height="28">
+      </a>
+
+      <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+        <span aria-hidden="true"></span>
+        <span aria-hidden="true"></span>
+        <span aria-hidden="true"></span>
+      </a>
+    </div>
+
+    <div id="navbarBasicExample" class="navbar-menu">
+      <div class="navbar-start">
+        <div class="navbar-item has-dropdown is-hoverable">
+          <a class="navbar-link">Palettes</a>
+          <div class="navbar-dropdown">
+            <a *ngFor="let palette of palettes | keyvalue" class="navbar-item" routerLink="palette/{{ palette.key }}">
+              {{palette.value.company}}: {{palette.value.name}}
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</nav>
 
 <router-outlet></router-outlet>
-<p>Endo</p>
+
+<footer class="footer">
+  <div class="content has-text-centered">
+    <p>
+      <strong>Eyeshadow</strong> by <a href="https://kathryndipippo.com">Kathryn DiPippo</a>.
+    </p>
+  </div>
+</footer>
