Reduced palette with threshold 6 displays

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,7 +30,7 @@
 <footer class="footer">
   <div class="content has-text-centered">
     <p>
-      <strong>Eyeshadow</strong> by <a href="https://kathryndipippo.com">Kathryn DiPippo</a>.
+      <strong>Eyeshadow</strong> by <a href="https://kathryndipippo.com">Kathryn DiPippo</a>. View source code on <a href="https://github.com/Pepper-Wood/Eyeshadow">GitHub</a>.
     </p>
   </div>
 </footer>
