--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar" role="navigation" aria-label="main navigation">
   <div class="container">
     <div class="navbar-brand">
-      <a class="navbar-item" [routerLink]="['/']" class="logo">eyeshadow</a>
+      <a class="navbar-item" [routerLink]="['/']" class="logo"><span id="logo"></span>eyeshadow</a>
 
       <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
         <span aria-hidden="true"></span>
@@ -31,6 +31,9 @@
   <div class="content has-text-centered">
     <p>
       <strong>Eyeshadow</strong> by <a href="https://kathryndipippo.com">Kathryn DiPippo</a>. View source code on <a href="https://github.com/Pepper-Wood/Eyeshadow">GitHub</a>.
+    </p>
+    <p>
+      Icon made by <a href="https://www.flaticon.com/authors/iconixar" title="iconixar">iconixar</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>.
     </p>
   </div>
 </footer>
