Renamed 'Eyeshadow' -> 'eyeshadow'; removed 'temp' folder

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,7 +30,7 @@
 <footer class="footer">
   <div class="content has-text-centered">
     <p>
-      <strong>Eyeshadow</strong> by <a href="https://kathryndipippo.com">Kathryn DiPippo</a>. View source code on <a href="https://github.com/Pepper-Wood/Eyeshadow">GitHub</a>.
+      <strong>eyeshadow</strong> by <a href="https://kathryndipippo.com">Kathryn DiPippo</a>. View source code on <a href="https://github.com/Pepper-Wood/eyeshadow">GitHub</a>.
     </p>
     <p>
       Icon made by <a href="https://www.flaticon.com/authors/iconixar" title="iconixar">iconixar</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>.
